在IDE中将Lab1内容推送至个人GitHub的Lab1仓库